generator client {
  provider      = "prisma-client-js"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id          String       @id @default(uuid())
  email       String       @unique
  name        String?
  avatarUrl   String?
  bio         String?
  website     String?
  isPublic    Boolean      @default(true)
  createdAt   DateTime     @default(now())
  updatedAt   DateTime     @updatedAt
  status      UserStatus   @default(ACTIVE)

  preferences     Preferences?
  stats           UserStats?
  goals           UserGoal[]
  badges          UserBadge[]
  chatSessions    ChatSession[]
}

enum UserStatus {
  ACTIVE
  SUSPENDED
  BANNED
  DEACTIVATED
}

model Preferences {
  id                  Int       @id @default(autoincrement())
  userId              String    @unique
  user                User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  theme               Theme     @default(SYSTEM)
  language            String    @default("en")
  timezone            String?

  notificationsEmail  Boolean   @default(true)
  notificationsSMS    Boolean   @default(false)
  newsletterOptIn     Boolean   @default(false)
  dailyDigest         Boolean   @default(true)

  defaultSortOrder    SortOrder @default(MOST_RECENT)
  defaultViewMode     ViewMode  @default(CARD)
  compactMode         Boolean   @default(false)

  accessibilityFont   Boolean   @default(false)
  reducedMotion       Boolean   @default(false)
  autoPlayMedia       Boolean   @default(false)
  settings            Json?

  createdAt           DateTime  @default(now())
  updatedAt           DateTime  @updatedAt
}

model UserStats {
  id            Int      @id @default(autoincrement())
  userId        String   @unique
  user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  booksRead     Int      @default(0)
  pagesRead     Int      @default(0)
  currentStreak Int      @default(0)
  longestStreak Int      @default(0)
  updatedAt     DateTime @updatedAt
  createdAt     DateTime @default(now())
}

model UserGoal {
  id        Int      @id @default(autoincrement())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  year      Int
  goalBooks Int
  progress  Int      @default(0)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([userId, year])
}

model UserBadge {
  id        Int      @id @default(autoincrement())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  badge     String
  awardedAt DateTime @default(now())
}

enum Theme {
  LIGHT
  DARK
  SYSTEM
}

enum SortOrder {
  MOST_RECENT
  MOST_POPULAR
  ALPHABETICAL
}

enum ViewMode {
  CARD
  LIST
}

model ChatSession {
  id            String    @id @default(uuid())
  userId        String
  user          User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  
  title         String    @default("New Chat")
  isPinned      Boolean   @default(false)
  isVisible     Boolean   @default(true)
  
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt
  lastMessageAt DateTime  @default(now())
  expiresAt     DateTime  @default(dbgenerated("NOW() + INTERVAL '24 hours'"))
  
  @@index([userId, lastMessageAt])
  @@index([userId, isPinned])
  @@index([expiresAt])
}
