erDiagram
  USER {
    string id PK
    string email UK
    string name
    string avatarUrl
    string bio
    string website
    boolean isPublic
    string status
    datetime createdAt
    datetime updatedAt
  }

  PREFERENCES {
    int id PK
    string userId UK,FK
    string theme
    string language
    string timezone
    boolean notificationsEmail
    boolean notificationsSMS
    boolean newsletterOptIn
    boolean dailyDigest
    string defaultSortOrder
    string defaultViewMode
    boolean compactMode
    boolean accessibilityFont
    boolean reducedMotion
    boolean autoPlayMedia
    json settings
    datetime createdAt
    datetime updatedAt
  }

  USER_STATS {
    int id PK
    string userId UK,FK
    int booksRead
    int pagesRead
    int currentStreak
    int longestStreak
    datetime createdAt
    datetime updatedAt
  }

  USER_GOAL {
    int id PK
    string userId FK
    int year
    int goalBooks
    int progress
    datetime createdAt
    datetime updatedAt
  }

  USER_BADGE {
    int id PK
    string userId FK
    string badge
    datetime awardedAt
  }

  CHAT_SESSION {
    string id PK
    string userId FK
    string title
    boolean isPinned
    boolean isVisible
    datetime createdAt
    datetime updatedAt
    datetime lastMessageAt
    datetime expiresAt
  }

  USER ||--o| PREFERENCES : has_one
  USER ||--o| USER_STATS : has_one
  USER ||--o{ USER_GOAL : has_many
  USER ||--o{ USER_BADGE : has_many
  USER ||--o{ CHAT_SESSION : has_many
